tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Snowqueen-AAAAAAAAAAAAAAAAAAABcQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 369,
  "prerequisites": [
    368,
    2242
  ],
  "properties": {
    "auto_claim": false,
    "desc": "I don't know why you would need a lot of Snow Queen blood. But this is the way to do it.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": true,
    "locked_progress": 0,
    "name": "Snow Queen",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    368,
    2242
  ],
  "rewards": [],
  "tasks": []
}
