tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__SpaceBees-AAAAAAAAAAAAAAAAAAAMpg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3238,
  "prerequisites": [
    2243
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Breed an industrious with a heroic bee to obtain a space bee. You need the temperature to be icy for that.\n\nJust one small step for you, but a giant leap for beekind.\n\n[note]This is the starting point for many space related bees. Maybe check out NEI to see what you can aim for.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Space Bees",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2243
  ],
  "rewards": [],
  "tasks": []
}
