tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Spectral-AAAAAAAAAAAAAAAAAAAIjQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2189,
  "prerequisites": [
    2175
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Spectral bees will require Ender bees to breed. This will test the ability of even the toughest beekeeper - don't forget your apiarist suit. To work in a bee housing, there must be a Dragon Egg nearby. Don't drop any bones, blaze rods or rotten meat! This bee will cause those to come back to life! Perhaps you can find a use for this ability. Breed them from Ender and Hermitic.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Spectral",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2175
  ],
  "rewards": [],
  "tasks": []
}
