tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Spidery-AAAAAAAAAAAAAAAAAAAIwA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2240,
  "prerequisites": [
    2239
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Watch out, the effect from this bee will attract spiders. But it has one nice trait - a large working area. Perfect for breeding into your fast pollinators or for providing useful effects. Breed it from Skulking and Tropical.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Spidery",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2239
  ],
  "rewards": [],
  "tasks": []
}
