tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Spiteful-AAAAAAAAAAAAAAAAAAAIyQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2249,
  "prerequisites": [
    2250
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The sheer disdain this bee shows you is awe inspiring. Must be bred in the Nether. Don't walk around it without proper protection, it seems to laugh when you think about that. Breed them from Hateful and Infernal.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Spiteful",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2250
  ],
  "rewards": [],
  "tasks": []
}
