tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__StainlessSteel-AAAAAAAAAAAAAAAAAAABcw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 371,
  "prerequisites": [
    370,
    2202
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Not particularly strong to be honest.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Stainless Steel",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    370,
    2202
  ],
  "rewards": [],
  "tasks": []
}
