tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Sunnarium-VoQgq6UvTZmo3tpUIZs4Rg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 11902817660252665926,
  "prerequisites": [
    4523657713420173531,
    2210500579099955712
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Not only does this bee produce more Glowstone than its parent species, but it's also capable of producing Sunnarium. However, this requires some technical progress: to breed this bee, you will need to place a Superconducting Coil Block beneath it.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Sunnarium",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    4523657713420173531,
    2210500579099955712
  ],
  "rewards": [],
  "tasks": []
}
